[package]
name = "tree-sitter-rocq"
description = "A Tree Sitter parser for the Rocq Prover language"
version = "0.1.0"
authors = ["Luis Ángel Méndez Gort <lamg@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rocq"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lamg/tree-sitter-rocq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
